--- a/package.json
+++ b/package.json
@@ -1,1 +1,21 @@
-{}
+{
+  "name": "mern-thinkboard",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "build": "npm install --prefix backend && npm run build --prefix frontend && npm run build --prefix frontend",
+    "start":"npm run start --prefix backend"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/harish-k05/thinkboard.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/harish-k05/thinkboard/issues"
+  },
+  "homepage": "https://github.com/harish-k05/thinkboard#readme",
+  "description": ""
+}
