--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,26 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "src/server.js",
-  "scripts": {
-    "dev": " nodemon src/server.js",
-    "start": "node src/server.js"
-  },
   "type": "module",
+  "description": "Backend for MERN Thinkboard application",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "mern-thinkboard": "file:..",
-    "mongoose": "^7.0.3"
+    "mongoose": "^8.2.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.0"
   }
 }
