--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm run build --prefix frontend && npm run build --prefix frontend",
-    "start":"npm run start --prefix backend"
+    "start": "node backend/server.js",
+    "server": "nodemon backend/server.js",
+    "client": "cd frontend && npm run dev",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "cd frontend && npm run build",
+    "prod": "cross-env NODE_ENV=production npm run build && npm start"
   },
   "repository": {
     "type": "git",
@@ -17,5 +21,14 @@
     "url": "https://github.com/harish-k05/thinkboard/issues"
   },
   "homepage": "https://github.com/harish-k05/thinkboard#readme",
-  "description": ""
+  "description": "A MERN stack application for collaborative thinking",
+  "dependencies": {
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "mongoose": "^8.2.1",
+    "nodemon": "^3.1.0"
+  }
 }
