--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "nodemon backend/server.js",
     "client": "cd frontend && npm run dev",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "cd frontend && npm run build",
+    "build": "cd frontend && npm install && npm run build",
     "prod": "cross-env NODE_ENV=production npm run build && npm start"
   },
   "repository": {
